--- a/index.html
+++ b/index.html
@@ -20,23 +20,27 @@
     </head>
     <body>
         <header class="o-row o-row--primary o-row--lg">
-            <div class="o-container">
+            <div class="o-container u-max-width-md">
                 <h1>Hello world! This is my HTML5 boilerplate.</h1>
                 <p>A Boilerplate helps you build fast, robust, and adaptable web apps or sites. Kick-start your project with the combined knowledge and effort of 100s of developers, all in one little package.</p>
             </div>
         </header>
         <main class="o-row o-row--lg">
-            <div class="o-container">
+            <div class="o-container u-max-width-md">
                 <h2>
                     A little bit of content
                 </h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="test.com">standard link</a> distinctio facilis excepturi, reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis quasi sed, facere quo nobis a blanditiis.
                 </p>
+            </div>
+            <div class="o-container u-max-width-xl">
                 <figure>
                     <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
                     <figcaption>Yawning cat. Photo by Martina Misar</figcaption>
                 </figure>
+            </div>
+            <div class="o-container u-max-width-md">
                 <h3>
                     To get you started
                 </h3>
